--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.scrolled-show-header {
+  background-color: rgba(0, 0, 0, 0.582) !important;
+  animation: slideIn 0.3s ease-in forwards;
+  border-color: transparent !important;
+}
+.scrolled-show-header h6 {
+  color: rgb(255, 255, 255);
+}
+.scrolled-show-backToTop-btn {
+  display: inline-flex !important;
+  animation: scaleUp 0.3s ease-in forwards;
+}
+@keyframes slideIn {
+  0% {
+    top: -5rem;
+  }
+  100% {
+    top: 0;
+  }
+}
+@keyframes scaleUp {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
