--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,11 @@
 }
 @keyframes scaleUp {
   0% {
+    opacity: 0;
     transform: scale(0);
   }
   100% {
+    opacity: 1;
     transform: scale(1);
   }
 }
